--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 						<div class="content">
 							<h1>Moritz Koenemann</h1>
 							<p class="major">Pysicist and Pragmatic Programmer.</p>
+							<ul class="icons">
+								<li><a href="https://xing.to/lefi7z" target="_blank" class="icon brands style2 fa-xing"><span class="label">Xing</span></a></li>
+								<li><a href="https://github.com/lefi7z" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:moritz.k-man@arcor.de" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll">Projects</a></li>
 							</ul>
