--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Moritz Koenemann</h1>
-							<p class="major">Pysicist and Pragmatic Programmer.</p>
+							<p class="major">Physicist and Pragmatic Programmer.</p>
 							<ul class="icons">
 								<li><a href="https://xing.to/lefi7z" target="_blank" class="icon brands style2 fa-xing"><span class="label">Xing</span></a></li>
 								<li><a href="https://github.com/lefi7z" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
